--- a/catalog/view/theme/default/template/xd_checkout/checkout.twig
+++ b/catalog/view/theme/default/template/xd_checkout/checkout.twig
@@ -191,7 +191,7 @@
 	// Save form data
 	$(document).on('change', '#payment-address input[type=\'text\'], #payment-address select', function() {
 		$.ajax({
-			url: 'index.php?route=checkout/xd_checkout/checkout/save&type=payment',
+			url: 'index.php?route=xd_checkout/checkout/save&type=payment',
 			type: 'post',
 			data: $('#payment-address input[type=\'text\'], #payment-address input[type=\'password\'], #payment-address input[type=\'checkbox\']:checked, #payment-address input[type=\'radio\']:checked, #payment-address input[type=\'hidden\'], #payment-address select, #payment-address textarea'),
 			dataType: 'json',
@@ -209,7 +209,7 @@
 
 	$(document).on('change', '#shipping-address input[type=\'text\'], #shipping-address select', function() {
 		$.ajax({
-			url: 'index.php?route=checkout/xd_checkout/checkout/save&type=shipping',
+			url: 'index.php?route=xd_checkout/checkout/save&type=shipping',
 			type: 'post',
 			data: $('#shipping-address input[type=\'text\'], #shipping-address input[type=\'password\'], #shipping-address input[type=\'checkbox\']:checked, #shipping-address input[type=\'radio\']:checked, #shipping-address input[type=\'hidden\'], #shipping-address select, #shipping-address textarea'),
 			dataType: 'json',
@@ -230,7 +230,7 @@
         // Login Form Clicked
         $(document).on('click', '#button-login', function() {
             $.ajax({
-                url: 'index.php?route=checkout/xd_checkout/login/validate',
+                url: 'index.php?route=xd_checkout/login/validate',
                 type: 'post',
                 data: $('#checkout #login :input'),
                 dataType: 'json',
@@ -269,7 +269,7 @@
     function validateRegister() {
         console.log('Validate Register');
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/register/validate',
+            url: 'index.php?route=xd_checkout/register/validate',
             type: 'post',
             data: $('#payment-address input[type=\'text\'], #payment-address input[type=\'password\'], #payment-address input[type=\'checkbox\']:checked, #payment-address input[type=\'radio\']:checked, #payment-address input[type=\'hidden\'], #payment-address select, #payment-address textarea'),
             dataType: 'json',
@@ -358,7 +358,7 @@
         });
         console.log('Form data for validation:', Array.from(formData.entries()));   
 
-        fetch("index.php?route=checkout/xd_checkout/guest/validate", {
+        fetch("index.php?route=xd_checkout/guest/validate", {
             method: "POST",
             body: formData,
             cache: "no-cache"
@@ -462,7 +462,7 @@
     // Validate Guest Shipping Address
     function validateGuestShippingAddress() {
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/guest_shipping/validate',
+            url: 'index.php?route=xd_checkout/guest_shipping/validate',
             type: 'post',
             data: $('#shipping-address input[type=\'text\'], #shipping-address input[type=\'checkbox\']:checked, #shipping-address input[type=\'radio\']:checked, #shipping-address select, #shipping-address textarea'),
             dataType: 'json',
@@ -531,7 +531,7 @@
     // Validate Payment Address
     function validatePaymentAddress() {
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/payment_address/validate',
+            url: 'index.php?route=xd_checkout/payment_address/validate',
             type: 'post',
             data: $('#payment-address input[type=\'text\'], #payment-address input[type=\'password\'], #payment-address input[type=\'checkbox\']:checked, #payment-address input[type=\'radio\']:checked, #payment-address input[type=\'hidden\'], #payment-address select, #payment-address textarea'),
             dataType: 'json',
@@ -594,7 +594,7 @@
         // Validate Shipping Address
         function validateShippingAddress() {
             $.ajax({
-                url: 'index.php?route=checkout/xd_checkout/shipping_address/validate',
+                url: 'index.php?route=xd_checkout/shipping_address/validate',
                 type: 'post',
                 data: $('#shipping-address input[type=\'text\'], #shipping-address input[type=\'password\'], #shipping-address input[type=\'checkbox\']:checked, #shipping-address input[type=\'radio\']:checked, #shipping-address select, #shipping-address textarea'),
                 dataType: 'json',
@@ -664,7 +664,7 @@
 // Payment Method
 function reloadPaymentMethod() {
 	$.ajax({
-		url: 'index.php?route=checkout/xd_checkout/payment_method',
+		url: 'index.php?route=xd_checkout/payment_method',
 		type: 'post',
 		data: $('#payment-address input[type=\'text\'], #payment-address input[type=\'checkbox\']:checked, #payment-address input[type=\'radio\']:checked, #payment-address input[type=\'hidden\'], #payment-address select, #payment-address textarea, #payment-method input[type=\'text\'], #payment-method input[type=\'checkbox\']:checked, #payment-method input[type=\'radio\']:checked, #payment-method input[type=\'hidden\'], #payment-method select, #payment-method textarea'),
 		dataType: 'html',
@@ -691,7 +691,7 @@ function reloadPaymentMethod() {
 
 function reloadPaymentMethodById(address_id) {
 	$.ajax({
-		url: 'index.php?route=checkout/xd_checkout/payment_method&address_id=' + address_id,
+		url: 'index.php?route=xd_checkout/payment_method&address_id=' + address_id,
 		type: 'post',
 		data: $('#payment-method input[type=\'checkbox\']:checked, #payment-method input[type=\'radio\']:checked, #payment-method input[type=\'hidden\'], #payment-method select, #payment-method textarea'),
 		dataType: 'html',
@@ -720,7 +720,7 @@ function reloadPaymentMethodById(address_id) {
 function validatePaymentMethod() {
     console.log('Validate Payment Method');
 	$.ajax({
-		url: 'index.php?route=checkout/xd_checkout/payment_method/validate',
+		url: 'index.php?route=xd_checkout/payment_method/validate',
 		type: 'post',
 		data: $('#payment-method select, #payment-method input[type=\'radio\']:checked, #payment-method input[type=\'checkbox\']:checked, #payment-method textarea'),
 		dataType: 'json',
@@ -767,7 +767,7 @@ function validatePaymentMethod() {
 		}
 		
 		$.ajax({
-			url: 'index.php?route=checkout/xd_checkout/shipping_method',
+			url: 'index.php?route=xd_checkout/shipping_method',
 			type: 'post',
 			data: post_data,
 			dataType: 'html',
@@ -790,7 +790,7 @@ function validatePaymentMethod() {
 
 	function reloadShippingMethodById(address_id) {
 		$.ajax({
-			url: 'index.php?route=checkout/xd_checkout/shipping_method&address_id=' + address_id,
+			url: 'index.php?route=xd_checkout/shipping_method&address_id=' + address_id,
 			type: 'post',
 			data: $('#shipping-method input[type=\'text\'], #shipping-method input[type=\'checkbox\']:checked, #shipping-method input[type=\'radio\']:checked, #shipping-method input[type=\'hidden\'], #shipping-method select, #shipping-method textarea'),
 			dataType: 'html',
@@ -815,7 +815,7 @@ function validatePaymentMethod() {
 	function validateShippingMethod() {
         console.log('Validate Shipping Method');
 		$.ajax({
-			url: 'index.php?route=checkout/xd_checkout/shipping_method/validate',
+			url: 'index.php?route=xd_checkout/shipping_method/validate',
 			type: 'post',
 			data: $('#shipping-method select, #shipping-method input[type=\'radio\']:checked, #shipping-method textarea, #shipping-method input[type=\'text\']'),
 			dataType: 'json',
@@ -856,7 +856,7 @@ function validatePaymentMethod() {
 function validateTerms() {
     console.log('Validate Terms');
 	$.ajax({
-		url: 'index.php?route=checkout/xd_checkout/terms/validate',
+		url: 'index.php?route=xd_checkout/terms/validate',
 		type: 'post',
 		data: $('#terms input[type=\'checkbox\']:checked'),
 		dataType: 'json',
@@ -897,7 +897,7 @@ function validateTerms() {
 function loadConfirm() {
     console.log('Load Confirm');
 	$.ajax({
-		url: 'index.php?route=checkout/xd_checkout/confirm',
+		url: 'index.php?route=xd_checkout/confirm',
 		dataType: 'html',
 		cache: false,
 		beforeSend: function() {
@@ -1004,7 +1004,7 @@ function loadConfirm() {
     function loadCart(step = 0) {
         console.log('function loadCart | step: ' + step);
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/cart&step=' + step,
+            url: 'index.php?route=xd_checkout/cart&step=' + step,
             dataType: 'html',
             cache: false,
             beforeSend: function() {
@@ -1035,7 +1035,7 @@ function loadConfirm() {
     // Validate Coupon
     $(document).on('click', '#button-coupon', function() {
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/voucher/validateCoupon',
+            url: 'index.php?route=xd_checkout/voucher/validateCoupon',
             type: 'post',
             data: $('#coupon-content :input'),
             dataType: 'json',
@@ -1108,7 +1108,7 @@ function loadConfirm() {
 
     $(document).on('click', '#button-voucher', function() {
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/voucher/validateVoucher',
+            url: 'index.php?route=xd_checkout/voucher/validateVoucher',
             type: 'post',
             data: $('#voucher-content :input'),
             dataType: 'json',
@@ -1181,7 +1181,7 @@ function loadConfirm() {
 
     $(document).on('click', '#button-reward', function() {
         $.ajax({
-            url: 'index.php?route=checkout/xd_checkout/voucher/validateReward',
+            url: 'index.php?route=xd_checkout/voucher/validateReward',
             type: 'post',
             data: $('#reward-content :input'),
             dataType: 'json',
@@ -1356,9 +1356,9 @@ $('.datetime').datetimepicker();
 
         if (curSection && toShowSection) {
             let validationUrls = {
-                'guest': 'index.php?route=checkout/xd_checkout/guest/validate',
-                'address_shipping-method': 'index.php?route=checkout/xd_checkout/payment_address/validate',
-                'payment_method': 'index.php?route=checkout/xd_checkout/payment_method/validate',
+                'guest': 'index.php?route=xd_checkout/guest/validate',
+                'address_shipping-method': 'index.php?route=xd_checkout/payment_address/validate',
+                'payment_method': 'index.php?route=xd_checkout/payment_method/validate',
             };
             if (validation && validationUrls[curSection.id]) {
                 let formData = new FormData();
@@ -1559,7 +1559,7 @@ $('.datetime').datetimepicker();
         if (!countrySelect || !zoneSelect) return;
 
         countrySelect.addEventListener('change', function() {
-            var url = 'index.php?route=checkout/xd_checkout/checkout/country&country_id=' + this.value;
+            var url = 'index.php?route=xd_checkout/checkout/country&country_id=' + this.value;
             var spinner = document.createElement('i');
             spinner.className = 'fa fa-spinner fa-spin';
             this.parentNode.appendChild(spinner);
