--- a/catalog/view/theme/default/stylesheet/xd_checkout_two.css
+++ b/catalog/view/theme/default/stylesheet/xd_checkout_two.css
@@ -1,4 +1,4 @@
-.xd_checkoutleft {
+/* .xd_checkoutleft {
 	width: 49%;
 	float: left;
 }
@@ -11,4 +11,4 @@
 }
 .totals-slip {
 	margin-top:-20px;
-}
+} */
