--- a/catalog/view/theme/default/template/extension/xd_checkout/login.twig
+++ b/catalog/view/theme/default/template/extension/xd_checkout/login.twig
@@ -1,23 +1,36 @@
 <div id="login">
-  <div class="col-sm-6 text-left">
-	<label class="control-label" for="input-login-email">{{ entry_email }}</label>
-	  <input type="text" name="email" value="" class="form-control" id="input-login-email" />
-  </div>
-  <div class="col-sm-6 text-left">
-	<label class="control-label" for="input-login-password">{{ entry_password }} <a href="{{ forgotten }}" title="{{ text_forgotten }}" data-toggle="tooltip"><i class="fa fa-question-circle"></i></a></label>
-	  <div class="input-group">
-		<input type="password" name="password" value="" class="form-control" />
-		<span class="input-group-btn">
-		  <button type="button" id="button-login" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_login }}</button>
-		</span>
-	  </div>
-  </div>
+    <form id="login-form">
+        <div class="w-100 form-group required">
+            <label class="control-label" for="input-login-email">{{ entry_email }}</label>
+            <input type="text" name="email" value="" class="form-control" id="input-login-email"  />
+        </div>
+        <div class="w-100 form-group required">
+            <label class="control-label" for="input-login-password">{{ entry_password }}</label>
+            <input type="password" name="password" value="" class="form-control" id="input-login-password" />
+        </div>
+        <div class="w-100 form-group mb-0">
+            <button type="button" id="button-login" data-loading-text="{{ text_loading }}" class="btn btn-primary btn-block w-100 btn-text-icon btn-text-icon-right" onclick="login();">
+                {{ button_login }}
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8"/>
+                </svg>
+            </button>
+        </div>
+    </form>
+    <div id="warning-messages"></div>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        const login = document.getElementById('login');
+        const loginButton = document.getElementById('button-login');
 
-<script type="text/javascript"><!--
-$('#login input').keydown(function(e) {
-	if (e.keyCode == 13) {
-		$('#button-login').click();
-	}
-});
-//--></script>   
+        if (login && loginButton) {
+            login.addEventListener('keydown', function(e) {
+                if (e.key === 'Enter' || e.keyCode === 13) {
+                    e.preventDefault();
+                    loginButton.click();
+                }
+            });
+        }
+    });
+</script>
