--- a/catalog/view/theme/default/stylesheet/xd_checkout.css
+++ b/catalog/view/theme/default/stylesheet/xd_checkout.css
@@ -15,9 +15,16 @@
     margin-bottom: 24px;
     padding: 0;
     font-weight: 600;
-    color: #000000;
-    /* text-transform: uppercase; */
     font-size: 22px;
+
+    color: #000000;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .xd_checkout-heading .fa {
@@ -501,4 +508,108 @@ table.xd_checkout-cart {
 .xd_checkout-block.active {
     max-height: 1000px;
     /* opacity: 1; */
+}
+
+
+/* modal custom */
+.modal.modal-custom {
+    background-color: rgba(0, 0, 0, 0.85);
+}
+
+.modal.fade.modal-custom .modal-dialog {
+    /* transform: translateY(0px) scaleX(1) scaleY(1) translateX(0px) rotateZ(0deg); */
+    transform-origin: 50% 50% 0px;
+
+    transition: transform 0.7s ease-out;
+}
+
+
+.modal-custom .modal-dialog {
+    position: relative;
+    width: auto;
+    margin: .5rem;
+    /* pointer-events: none; */
+}
+
+.modal-custom .modal-dialog.modal-dialog-centered {
+    display: flex;
+    align-items: center;
+    min-height: calc(100% - 1rem);
+}
+
+
+@media (min-width: 576px) {
+    .modal-custom .modal-dialog.modal-dialog-centered {
+        min-height: calc(100% - 3.5rem);
+    }
+
+    .modal-custom .modal-dialog.modal-dialog-centered {
+        max-width: 500px;
+        margin: 1.75rem auto;
+    }
+}
+
+.modal.modal-custom .modal-content {
+    margin: 0;
+    padding: 24px;
+
+    border-radius: 12px;
+
+    background-color: var(--primary-white-100, #fcfcfc);
+
+    width: 100%;
+}
+
+.modal-custom .modal-header {
+    padding: 0 16px 8px 16px;
+    border: none;
+    position: relative;
+
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.modal-custom .modal-header:before,
+.modal-custom .modal-header:after {
+    content: none;
+}
+
+.modal-custom .modal-header>.modal-title {
+    font-size: 1.75em;
+}
+
+.modal-custom .modal-header>.btn-close {
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: -12px;
+    right: -12px;
+    z-index: 9;
+
+    border: none;
+    background-color: transparent;
+}
+
+.modal.modal-custom .btn-close {
+    color: var(--text-color-default, #1b1d21);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-x-lg' viewBox='0 0 16 16'%3E%3Cpath d='M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    width: 24px;
+    height: 24px;
+    opacity: 1;
+}
+
+.modal.modal-custom .btn-close:hover,
+.modal.modal-custom .btn-close:focus {
+    color: var(--text-accent-color, #000000);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23e61f80' class='bi bi-x-lg' viewBox='0 0 16 16'%3E%3Cpath d='M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z'/%3E%3C/svg%3E");
+    opacity: 1;
+
+    outline: none;
+    border: none;
+    box-shadow: none;
 }
